# youtube-music-crossfade

./: .gitignore  LICENSE  README.md  Untitled26.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  youtube_music_crossfade.ipynb
src/ytcrossfade/: cli.py  downloader.py  mixer.py
tests/: test_mixer.py
